kubernetes/share/kube/4-share-traefik.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: share-service-externalname
  namespace: website
spec:
  type: ExternalName
  externalName: share-service.share.svc.cluster.local
  ports:
  - name: http
    port: 8080
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: share-ingress
  namespace: website
  annotations:
    kubernetes.io/ingressClassName: "traefik"
    # traefik.ingress.kubernetes.io/router.middlewares: <namespace>-<MiddlewareName>@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: website-https-redirect@kubernetescrd
spec:
  tls:
  - hosts:
    - share.brettevrist.net
    # no secretName specified, use default certificate
  defaultBackend:
    service:
      name: share-service-externalname
      port:
        number: 8080
  rules:
  - host: share.brettevrist.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: share-service-externalname
            port:
              number: 8080
